[gd_scene load_steps=8 format=3 uid="uid://jhdlqsokif5o"]

[ext_resource type="Script" uid="uid://bfwqbkp8pqnco" path="res://Dev/Managers/LobbyManager.gd" id="1"]
[ext_resource type="Script" uid="uid://btmi43s7bt7bl" path="res://Dev/UI/PlayerList.gd" id="2_wih6l"]
[ext_resource type="Script" uid="uid://bvb087n5yeyi7" path="res://Dev/UI/PlayerCustomizationPanel.gd" id="3_6dll3"]

[sub_resource type="LabelSettings" id="LabelSettings_tmcyg"]
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_askth"]
bg_color = Color(0.970415, 0, 0.344291, 0.266667)
skew = Vector2(0.245, 0.055)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0, 0.454902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_74y6q"]
bg_color = Color(0.411765, 0.596078, 0, 0.266667)
skew = Vector2(0.245, 0.055)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 0.815686, 0, 1)
expand_margin_bottom = 3.0

[sub_resource type="LabelSettings" id="LabelSettings_7u8u0"]
font_size = 32

[node name="Lobby" type="Control" node_paths=PackedStringArray("player_name", "error_label", "host", "lobby_container", "inside_lobby_panel", "outside_lobby_panel", "windowInstanceLabel", "steamLobbyIdTextField")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")
player_name = NodePath("NameLabel")
error_label = NodePath("Outside Lobby Panel/Steam/ErrorLabel")
host = NodePath("Outside Lobby Panel/Enet/Host")
lobby_container = NodePath("Outside Lobby Panel/ScrollContainer/LobbyContainer")
inside_lobby_panel = NodePath("Inside Lobby Panel")
outside_lobby_panel = NodePath("Outside Lobby Panel")
windowInstanceLabel = NodePath("Window Instance ID")
steamLobbyIdTextField = NodePath("Outside Lobby Panel/Steam/SteamLobbyIdTextField")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 54.0
size_flags_vertical = 0
text = "Player Name"
label_settings = SubResource("LabelSettings_tmcyg")
vertical_alignment = 1

[node name="Window Instance ID" type="Label" parent="."]
layout_mode = 0
offset_top = 54.0
offset_right = 1152.0
offset_bottom = 108.0
size_flags_vertical = 0
text = "Player Name"
label_settings = SubResource("LabelSettings_tmcyg")
vertical_alignment = 1

[node name="Inside Lobby Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 54.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Label" type="Label" parent="Inside Lobby Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.5
offset_top = 65.0
offset_right = 70.5
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Awaiting Players..."

[node name="Start" type="Button" parent="Inside Lobby Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = 20.0
offset_right = 63.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
text = "START!"

[node name="LobbyID" type="LineEdit" parent="Inside Lobby Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = 113.0
offset_right = 134.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Lobby ID"
editable = false

[node name="Leave Lobby" type="Button" parent="Inside Lobby Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = 185.5
offset_right = 64.0
offset_bottom = 216.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Leave Lobby"

[node name="List Background" type="ColorRect" parent="Inside Lobby Panel"]
layout_mode = 0
offset_left = 276.0
offset_top = 52.0
offset_right = 876.0
offset_bottom = 311.0
color = Color(0, 0, 0, 0.235294)

[node name="PlayerListScrollable" type="ScrollContainer" parent="Inside Lobby Panel"]
layout_mode = 0
offset_left = 276.0
offset_top = 52.0
offset_right = 876.0
offset_bottom = 307.0

[node name="PlayerListContainer" type="VBoxContainer" parent="Inside Lobby Panel/PlayerListScrollable"]
custom_minimum_size = Vector2(600, 255)
layout_mode = 2
script = ExtResource("2_wih6l")

[node name="Customization Panel" type="Panel" parent="Inside Lobby Panel"]
layout_mode = 0
offset_left = 896.0
offset_top = 52.0
offset_right = 1133.0
offset_bottom = 311.0
script = ExtResource("3_6dll3")

[node name="Title" type="Label" parent="Inside Lobby Panel/Customization Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Customization"
horizontal_alignment = 1

[node name="PlayerColorPicker" type="ColorPickerButton" parent="Inside Lobby Panel/Customization Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 159.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = 78.0
grow_horizontal = 2
color = Color(1, 0, 0, 1)
edit_alpha = false

[node name="Label2" type="Label" parent="Inside Lobby Panel/Customization Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 41.0
offset_top = 40.0
offset_right = -92.0
offset_bottom = 63.0
grow_horizontal = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Player Color:"

[node name="ApplyCustomizationButton" type="Button" parent="Inside Lobby Panel/Customization Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -118.5
offset_top = -31.0
offset_right = 118.5
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_askth")
theme_override_styles/normal = SubResource("StyleBoxFlat_74y6q")
text = "Apply"

[node name="Outside Lobby Panel" type="Panel" parent="."]
layout_mode = 0
offset_top = 54.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Enet" type="VBoxContainer" parent="Outside Lobby Panel"]
layout_mode = 0
offset_left = 47.0
offset_top = 79.0
offset_right = 492.0
offset_bottom = 238.0
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Outside Lobby Panel/Enet"]
layout_mode = 2
text = "ENet Connection"
label_settings = SubResource("LabelSettings_7u8u0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Host" type="Button" parent="Outside Lobby Panel/Enet"]
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="Outside Lobby Panel/Enet"]
layout_mode = 2
text = "Join"

[node name="Steam" type="VBoxContainer" parent="Outside Lobby Panel"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
offset_left = 172.0
offset_top = 303.0
offset_right = 372.0
offset_bottom = 507.0
size_flags_vertical = 0

[node name="Steam Label" type="Label" parent="Outside Lobby Panel/Steam"]
layout_mode = 2
text = "Steam
"
label_settings = SubResource("LabelSettings_7u8u0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Lobby ID Label" type="Label" parent="Outside Lobby Panel/Steam"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 16
text = "Lobby id:"

[node name="Host" type="Button" parent="Outside Lobby Panel/Steam"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Host"

[node name="SteamLobbyIdTextField" type="LineEdit" parent="Outside Lobby Panel/Steam"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
placeholder_text = "Lobby Id Here"

[node name="Join" type="Button" parent="Outside Lobby Panel/Steam"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Join"

[node name="Refresh" type="Button" parent="Outside Lobby Panel/Steam"]
layout_mode = 2
text = "Refresh
"

[node name="ErrorLabel" type="Label" parent="Outside Lobby Panel/Steam"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.820312, 0.291595, 0.291595, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="Outside Lobby Panel"]
layout_mode = 2
offset_left = 702.0
offset_top = 13.0
offset_right = 1074.0
offset_bottom = 576.0
size_flags_horizontal = 3

[node name="LobbyContainer" type="VBoxContainer" parent="Outside Lobby Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ErrorDialog" type="AcceptDialog" parent="."]

[node name="DebugAutoStartGame" type="Node" parent="."]

[connection signal="pressed" from="Inside Lobby Panel/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Inside Lobby Panel/Leave Lobby" to="." method="_on_leave_lobby_pressed"]
[connection signal="color_changed" from="Inside Lobby Panel/Customization Panel/PlayerColorPicker" to="Inside Lobby Panel/Customization Panel" method="_on_color_changed"]
[connection signal="pressed" from="Inside Lobby Panel/Customization Panel/ApplyCustomizationButton" to="Inside Lobby Panel/Customization Panel" method="onApply"]
[connection signal="pressed" from="Outside Lobby Panel/Enet/Host" to="." method="_on_enet_host_pressed"]
[connection signal="pressed" from="Outside Lobby Panel/Enet/Join" to="." method="_on_enet_join_pressed"]
[connection signal="pressed" from="Outside Lobby Panel/Steam/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Outside Lobby Panel/Steam/Join" to="." method="_join_steam_lobby"]
[connection signal="pressed" from="Outside Lobby Panel/Steam/Refresh" to="." method="_request_lobby_list"]
